# lidar_prototype_rust

./: Cargo.toml  gdd.md
assets/: game.rconfig  user.rconfig  user.ron
assets/shaders/: custom_material.wgsl
src/: assets.rs  gamestate.rs  gun.rs  input.rs  main.rs  material.rs  pause.rs  player.rs  settings.rs  space.rs  util.rs
