[package]
name = "lidar"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.2"
rand = "0.9.0"
serde = "1.0.217"
bevy_common_assets = { version = "0.12.0", features = ["ron"] }
iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui" }

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
